Fix null and blank checks for Java 8 compatibility
Updated null and blank checks to be compatible with Java 8 by replacing isBlank() with trim().isEmpty() for appId, appSecret, and openId.